[package]
name = "sykin"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
version = "0.1.0"
description = "A library kinematic calculations using the syunit-unit-system"
edition = "2021"
repository = "https://github.com/SamuelNoesslboeck/sykin"
license-file = "LICENSE"
keywords = [ "kinematics" ]

[dependencies]
syunit = "0.4.0"

[[example]]
name = "full_walkthrough"
path = "examples/full_walkthrough.rs"